fix styling on small screen for profiles

--- a/src/app.css
+++ b/src/app.css
@@ -98,5 +98,7 @@
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     color:black;
+    display: 'inline';
+
 }
 
