--- a/src/index.css
+++ b/src/index.css
@@ -32,20 +32,32 @@
   .heavy-padded {
   padding-top: 1em;
   }
+
+  .not-sidebar {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .navbar-layout {
+    margin: auto;
+  }
 }
 /* Mid and large screens */
 @media screen and (min-width: 799px){
   .heavy-padded {
   padding-top: 80px;
   }
-}
-
-.not-sidebar {
-  flex-basis: 0;
-  flex-grow: 1100;
-  min-width: 50%;
-  padding-left: 10em;
-  padding-right: 10em;
+  .not-sidebar {
+    flex-basis: 0;
+    flex-grow: 1100;
+    min-width: 50%;
+    padding-left: 10em;
+    padding-right: 10em;
+  }
+  .navbar-layout {
+    width: 60%;
+    margin: auto;
+  }
 }
 
 .nav-links {
@@ -81,10 +93,7 @@
   line-height: 27px;
 }
 
-.navbar-layout {
-  width: 60%;
-  margin: auto;
-}
+
 
 .nav-links:hover {
   font-weight:600;
